test/Fail/Issue3932.err
Issue3932.agda:13.5-15.12: error: [NotAllowedInMutual]
mutual blocks in mutual blocks are not supported. Suggestion: get
rid of the mutual block by manually ordering declarations
when scope checking the declaration
  module M where

Issue3932.agda:23.5-24.14: error: [NotAllowedInMutual]
mutual blocks in mutual blocks are not supported. Suggestion: get
rid of the mutual block by manually ordering declarations
when scope checking the declaration
  module N where

Issue3932.agda:31.5-11: error: [Syntax.DisallowedInterleavedMutual]
The following names are declared, but not accompanied by a
definition:
- A (at Issue3932.agda:29.5-6)
Since 'mutual' blocks can not participate in mutual recursion,
their definition must be given before this point.
when scope checking the declaration
  module O where
